tests/samples/negative/resources/move_defer_borrow_alias_after_move.ax
module move_defer_borrow_alias_after_move;

fn consume[T](value: T) -> void {
}

fn inspect[T](value: &T) -> void {
}

fn duplicate[T](value: T) -> void {
    let borrowed: &T = &value;
    defer inspect(borrowed);
    consume(value);
}

fn main() -> i32 {
    return 0;
}
